# pdf-excel-extractor

./: .gitignore  CLAUDE.md  DEVELOPMENT_PLAN.md  EXECUTION_PLAN.md  README.md  UI_MOCKUPS.md
backend/: DAY2_SUMMARY.md  pyproject.toml
backend/app/: __init__.py  api_history.py  ipc_server.py  main.py  message_handler.py  mock_extraction.json  models.py  models_audit_enhanced.py  protocols.py
backend/app/security/: __init__.py  audit_logger.py  encryption.py  extraction_history.py  file_handler.py  memory_manager.py  network_blocker.py  security_wrapper.py  usage_example.py  validators.py
backend/app/services/: __init__.py  pdf_processor.py
backend/tests/: test_pdf_processor.py
coordinator/: blockers.md  daily-status.md
coordinator/api-contracts/: extraction.yaml
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/electron/: enhanced-message-queue.js  ipc-bridge-standalone.js  ipc-bridge-v2.js  ipc-bridge.js  main-with-ipc.js  main.js  message-queue.js  preload.js  python-process.js  retry-handler.js  test-enhanced-ipc.js  test-ipc.js
frontend/src/: App.jsx  index.css  main.jsx
parallel-implementation-plans/: COORDINATOR-PLAN.md  coordinator-startup.sh
parallel-implementation-plans/agents/: AGENT-1-PDF-PROCESSING.md  AGENT-2-UI-VISUAL.md  AGENT-3-EXCEL-INTEGRATION.md  AGENT-4-SECURITY-TRUST.md  AGENT-5-IPC-INTEGRATION.md
parallel-implementation-plans/status/: AGENT-1-STATUS.md  AGENT-2-STATUS.md  AGENT-3-STATUS.md  AGENT-4-STATUS.md  AGENT-5-STATUS.md  INTEGRATION-STATUS.md  STATUS-TEMPLATE.md
(+27 files in other folders)
