[tool.poetry]
name = "pdf-excel-extractor-backend"
version = "0.1.0"
description = "Backend service for PDF to Excel extraction"
authors = ["Your Name <your.email@example.com>"]
python = "^3.11"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pdfplumber = "^0.10.3"
openpyxl = "^3.1.2"
pytesseract = "^0.3.10"
python-multipart = "^0.0.6"
pydantic = "^2.5.0"
aiofiles = "^23.2.1"
psutil = "^5.9.6"
cryptography = "^41.0.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
black = "^23.11.0"
flake8 = "^6.1.0"
mypy = "^1.7.1"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true